--- a/app/src/main/res/layout/activity_inicial.xml
+++ b/app/src/main/res/layout/activity_inicial.xml
@@ -27,9 +27,15 @@
             android:id="@+id/questionario_botao"
             android:layout_width="200dp"
             android:layout_height="80dp"
-            android:layout_marginTop="160dp"
+            android:layout_marginStart="106dp"
+            android:layout_marginLeft="106dp"
+            android:layout_marginTop="53dp"
+            android:layout_marginEnd="105dp"
+            android:layout_marginRight="105dp"
+            android:layout_marginBottom="64dp"
             android:background="@android:color/background_light"
             android:text="Questionário"
+            app:layout_constraintBottom_toTopOf="@+id/textView22"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView21" />
@@ -51,9 +57,14 @@
             android:id="@+id/pular_botao"
             android:layout_width="200dp"
             android:layout_height="80dp"
-            android:layout_marginTop="84dp"
+            android:layout_marginStart="106dp"
+            android:layout_marginLeft="106dp"
+            android:layout_marginTop="58dp"
+            android:layout_marginEnd="105dp"
+            android:layout_marginRight="105dp"
             android:background="@android:color/background_light"
             android:text="Pular"
+            app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView22" />
