Navegação fragment for activity

--- a/app/src/main/res/layout/activity_aids.xml
+++ b/app/src/main/res/layout/activity_aids.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".doencas.CovidActivity">
+    tools:context=".doencas.AidsActivity">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="250dp"
             android:textSize="50dp"
-            android:text="Favela venceu no Covid familia !"
+            android:text="Favela venceu na Aids familia !"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
