--- a/app/src/main/res/layout/activity_questionario.xml
+++ b/app/src/main/res/layout/activity_questionario.xml
@@ -552,7 +552,8 @@
             app:layout_constraintBottom_toTopOf="@+id/textView20"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/textView19" />
+            app:layout_constraintTop_toBottomOf="@+id/textView19"
+            app:layout_constraintVertical_bias="0.19999999" />
 
         <TextView
             android:id="@+id/textView20"
@@ -958,6 +959,23 @@
             app:layout_constraintStart_toEndOf="@+id/formigamento"
             app:layout_constraintTop_toBottomOf="@+id/dores_articulacoes"
             app:layout_constraintVertical_bias="0.0" />
+
+        <Button
+            android:id="@+id/botao_informacao"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginStart="177dp"
+            android:layout_marginLeft="177dp"
+            android:layout_marginTop="82dp"
+            android:layout_marginEnd="177dp"
+            android:layout_marginRight="177dp"
+            android:layout_marginBottom="17dp"
+            android:text="Ver informações sobre a doença"
+            android:visibility="invisible"
+            app:layout_constraintBottom_toTopOf="@+id/textView20"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/textView19" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>
