--- a/app/src/main/res/layout/fragment_doencas.xml
+++ b/app/src/main/res/layout/fragment_doencas.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<ScrollView
+ xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.dashboard.DashboardFragment">
+
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
 
 
     <Button
@@ -86,3 +93,4 @@
         app:layout_constraintTop_toBottomOf="@+id/button_gripe" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+</ScrollView>
